updated Code with Animation

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div id="particles-js"></div>
+
 
 <header>
     <h1>Jeevithgowda R M</h1>
@@ -129,5 +131,20 @@
     <p>© 2025 Jeevithgowda R M</p>
 </footer>
 
+<!-- Particles.js library -->
+<script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
+
+<!-- Init Particles -->
+<script>
+particlesJS("particles-js", {
+  "particles": {
+    "number": { "value": 60 },
+    "size": { "value": 3 },
+    "move": { "speed": 1 },
+    "line_linked": { "enable": true, "color": "#007BFF" },
+    "color": { "value": "#ffffff" }
+  }
+});
+</script>
 </body>
 </html>
