--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
 
 <!-- PROJECTS -->
 <section id="projects" class="fade-in">
+    <!-- MODAL POPUP -->
+<div id="projectModal" class="modal">
+    <span class="close" onclick="closeModal()">&times;</span>
+    <div id="modalBody"></div>
+    <div id="modalLinks" class="modal-links"></div>
+</div>
+
     <h2><i class="fas fa-project-diagram"></i> Projects</h2>
 
     <!-- FILTER BAR -->
@@ -81,20 +88,12 @@
         </div>
 
         <div class="card" data-category="cyber"
-             onclick="openModal('phishing.jpg', 
+             onclick="openvideoModal('https://drive.google.com/file/d/19k4djVkatjtYwYWnlKphUEiR3qjIgkow/view?usp=sharing', 
              'Phish Shield - Detection of Link wheather Safe/Fake', 
+             'This project explains phishing attack detection with AI',
              'Built using Python, with Streamlit for the user interface, Scikit-learn (Random Forest) for phishing URL detection, and libraries like Pandas, NumPy, and tldextract for data processing and feature extraction. Managed version control with Git/GitHub. ', 
-             'https://drive.google.com/file/d/19k4djVkatjtYwYWnlKphUEiR3qjIgkow/view?usp=sharing', 
              'https://github.com/jeevithgowdarm/phish_shield.git')">
-            <img src=""C:\Users\JEEVITH GOWDA R M\OneDrive\Desktop\portfolio\project_images\phishing_detection_image\Screenshot (343).png"
-"C:\Users\JEEVITH GOWDA R M\OneDrive\Desktop\portfolio\project_images\phishing_detection_image\Screenshot (344).png"
-"C:\Users\JEEVITH GOWDA R M\OneDrive\Desktop\portfolio\project_images\phishing_detection_image\Screenshot (345).png"
-"C:\Users\JEEVITH GOWDA R M\OneDrive\Desktop\portfolio\project_images\phishing_detection_image\Screenshot (346).png"
-"C:\Users\JEEVITH GOWDA R M\OneDrive\Desktop\portfolio\project_images\phishing_detection_image\Screenshot (347).png"
-"C:\Users\JEEVITH GOWDA R M\OneDrive\Desktop\portfolio\project_images\phishing_detection_image\Screenshot (348).png"
-"C:\Users\JEEVITH GOWDA R M\OneDrive\Desktop\portfolio\project_images\phishing_detection_image\Screenshot (340).png"
-"C:\Users\JEEVITH GOWDA R M\OneDrive\Desktop\portfolio\project_images\phishing_detection_image\Screenshot (341).png"
-"C:\Users\JEEVITH GOWDA R M\OneDrive\Desktop\portfolio\project_images\phishing_detection_image\Screenshot (342).png".jpg" alt="Detection of Safe/Fake Link">
+            <img src="C:\Users\JEEVITH GOWDA R M\OneDrive\Desktop\portfolio\project_images\phishing_detection_image.jpg" alt="Detection of Safe/Fake Link">
             <h3>Cyber-Related Phish_Shield</h3>
         </div>
 
