--- a/index.html
+++ b/index.html
@@ -57,13 +57,6 @@
 
 <!-- PROJECTS -->
 <section id="projects" class="fade-in">
-    <!-- MODAL POPUP -->
-<div id="projectModal" class="modal">
-    <span class="close" onclick="closeModal()">&times;</span>
-    <div id="modalBody"></div>
-    <div id="modalLinks" class="modal-links"></div>
-</div>
-
     <h2><i class="fas fa-project-diagram"></i> Projects</h2>
 
     <!-- FILTER BAR -->
@@ -93,7 +86,7 @@
              'This project explains phishing attack detection with AI',
              'Built using Python, with Streamlit for the user interface, Scikit-learn (Random Forest) for phishing URL detection, and libraries like Pandas, NumPy, and tldextract for data processing and feature extraction. Managed version control with Git/GitHub. ', 
              'https://github.com/jeevithgowdarm/phish_shield.git')">
-            <img src="C:\Users\JEEVITH GOWDA R M\OneDrive\Desktop\portfolio\project_images\phishing_detection_image.jpg" alt="Detection of Safe/Fake Link">
+            <img src="C:\Users\JEEVITH GOWDA R M\OneDrive\Desktop\portfolio\project_images\phishing_detection_image\Screenshot (343).png.jpg" alt="Detection of Safe/Fake Link">
             <h3>Cyber-Related Phish_Shield</h3>
         </div>
 
@@ -129,6 +122,12 @@
 
     </div>
 </section>
+<!-- MODAL POPUP -->
+<div id="projectModal" class="modal">
+    <span class="close" onclick="closeModal()">&times;</span>
+    <div id="modalBody"></div>
+    <div id="modalLinks" class="modal-links"></div>
+</div>
 
 <section>
     <h2>Achievements</h2>
