Updated code for index and script

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jeevithgowda R M - Portfolio</title>
+    <title>JEEVITHGOWDA R M - Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,8 +11,8 @@
 
 
 <header>
-    <h1>Jeevithgowda R M</h1>
-    <p>Computer Science & Design Engineering Student | Aspiring Full-Stack Developer</p>
+    <h1>JEEVITHGOWDA R M</h1>
+    <p>Computer Science & Design Engineering Student | Aspiring Data Analystics and Data Visualization| Aspiring Full-Stack Developer</p>
     <p>
         <a href="mailto:jeevithjeeva12345@gmail.com">📧 Email</a> | 
         <a href="tel:+917406012512">📞 Call</a> | 
@@ -21,12 +21,12 @@
     </p>
 </header>
 
-<section>
+<section id="about" class="fade-in">
     <h2>Professional Summary</h2>
     <p>A results-driven and curious final-year Computer Science and Design Engineering student with a strong grasp of full-stack development, object-oriented programming, and machine learning. Skilled in C, C++, Python, JavaScript, HTML/CSS, and MySQL with practical experience in tools like Gradio, OpenCV, and TensorFlow.</p>
 </section>
 
-<section>
+<section id="skills" class="fade-in">
     <h2>Technical Skills</h2>
     <ul>
         <li>Programming: C, C++, Python</li>
@@ -37,7 +37,7 @@
     </ul>
 </section>
 
-<section>
+<section id="education" class="fade-in">
     <h2>Education</h2>
     <ul>
         <li><b>B.E. Computer Science & Design</b>, ATME College of Engineering (CGPA: 8.9) – Expected Sept 2026</li>
@@ -46,7 +46,7 @@
     </ul>
 </section>
 
-<section>
+<section id="internship" class="fade-in">
     <h2>Internship</h2>
     <p><b>Ediglobe | Intern (2 Months)</b></p>
     <ul>
@@ -71,11 +71,10 @@
     <div class="gallery">
 
         <div class="card" data-category="ai"
-             onclick="openModal('traffic.jpg', 
+             onclick="openvideoModal('https://your-live-demo-link.com/traffic',
              'AI-Based Traffic Management System', 
              'Used LSTM & YOLOv5 for congestion prediction & emergency vehicle detection. Reduced congestion by 30% in simulations.', 
-             'https://your-live-demo-link.com/traffic', 
-             'https://github.com/jeevithgowdarm/traffic-management')">
+              'https://github.com/jeevithgowdarm/traffic-management')">
             <img src="traffic.jpg" alt="AI Traffic Management">
             <h3>AI-Based Traffic Management</h3>
         </div>
@@ -91,30 +90,27 @@
         </div>
 
         <div class="card" data-category="cloud"
-             onclick="openModal('resume-builder.jpg', 
+             onclick="openVideoModal('https://your-live-demo-link.com/resume-builder',  
              'Cloud-Based Resume Builder', 
              'Created an online resume generation platform with cloud storage for easy access.', 
-             'https://your-live-demo-link.com/resume-builder', 
              'https://github.com/jeevithgowdarm/resume-builder')">
             <img src="resume-builder.jpg" alt="Cloud Resume Builder">
             <h3>Cloud-Based Resume Builder</h3>
         </div>
 
         <div class="card" data-category="ai web"
-             onclick="openModal('car-price.jpg', 
+             onclick="openVideoModal('https://your-live-demo-link.com/car-price', 
              'Car Price Prediction', 
              'AI-powered web app predicting car prices with high accuracy. Built during Ediglobe internship.', 
-             'https://your-live-demo-link.com/car-price', 
              'https://github.com/jeevithgowdarm/car-price-prediction')">
             <img src="car-price.jpg" alt="Car Price Prediction">
             <h3>Car Price Prediction</h3>
         </div>
 
         <div class="card" data-category="web ai"
-             onclick="openModal('interior-design.jpg', 
+             onclick="openVideoModal('https://your-live-demo-link.com/interior-design', 
              'Interior Design Web App', 
              'ML-powered design visualization tool for architects & interior designers.', 
-             'https://your-live-demo-link.com/interior-design', 
              'https://github.com/jeevithgowdarm/interior-design-app')">
             <img src="interior-design.jpg" alt="Interior Design">
             <h3>Interior Design Web App</h3>
@@ -129,7 +125,7 @@
     <div id="modalLinks" class="modal-links"></div>
 </div>
 
-<section>
+<section id="achievements" class="fade-in">
     <h2>Achievements</h2>
     <ul>
         <li>3 hackathons, 2 idea pitches, 1 PPT competition.</li>
@@ -139,8 +135,8 @@
 </section>
 
 <section>
-    <h2>Resume</h2>
-    <a class="btn" href="resume.pdf" download>📄 Download My Resume</a>
+    <h2>My Resume</h2>
+    <a href="resume.pdf" download class="btn">📄Download Resume</a>
 </section>
 
 <footer>
